clusters/homelab/storage/garage/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: garage-s3
  namespace: storage
spec:
  parentRefs:
    - name: cf-tunnel
      namespace: kube-system
  hostnames:
    - files.tylerrosnett.com
  rules:
    - backendRefs:
        - name: garage
          port: 3900
